<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textVIew__library_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/iropkebatang"
                android:text="@string/library__title"
                android:textColor="#2980b9"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView__library_exoplayer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/iropkebatang"
                android:text="@string/library__exoplayer"
                android:textColor="#2980b9"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView__library_exoplayer_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ecf0f1"
                android:fontFamily="@font/iropkebatang"
                android:padding="10dp"
                android:text="@string/library__exoplayer_contents"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView__library_flexbox_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/iropkebatang"
                android:text="@string/library__flexbox"
                android:textColor="#2980b9"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView__library_flexbox_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ecf0f1"
                android:fontFamily="@font/iropkebatang"
                android:padding="10dp"
                android:text="@string/library__flexbox_contents"
                android:textColor="#000000" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>